# proof_issue_scrypto

./: Cargo.toml
src/: child.rs  lib.rs  parent.rs
tests/: lib.rs
